k8s/ingress-dom.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fullstack-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: biblioteca.example.com
      http:
        paths:
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - pathType: Prefix
            path: /api/?(.*)
            backend:
              service:
                name: backend
                port:
                  number: 5000
